testsuite/tests/interpreter_errors/constructor_call/named_overlap_positional/test.out
script.lkql:3:5: error: This named argument overlaps a previous positional argument
  3 |     f_left=new IntLiteral("8"),
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
